fix alignment of header

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -43,7 +43,8 @@ ul {
 }
 
 .pdfLink {
-  float: right;
+  display: block;
+  text-align: right;
 }
 
 .pdfLink .fa {
